fix regular button css to not break the login page

--- a/app/assets/stylesheets/components/regular_button.scss
+++ b/app/assets/stylesheets/components/regular_button.scss
@@ -1,5 +1,5 @@
 .regular-button {
-    width: auto;
+    width: 100%;
     flex-shrink: 0;
     display: flex;
     justify-content: center;
